--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "axios": "^0.17.1",
+    "create-react-class": "^15.6.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.0.17",
-    "semantic-ui-react": "^0.77.1"
+    "react-slider": "^0.9.0",
+    "semantic-ui-react": "^0.77.1",
+    "slider": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
